# Akira

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.husky/: pre-commit
server/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
server/app/: main.py  worker.py
server/app/api/v1/: chat_router.py  customer_router.py  mechanic_router.py  mia_router.py  rag_router.py  vehicle_router.py
server/app/clients/embedding_clients/: base_embedding_client.py  gemini_embedding_client.py  huggingface_embedding_client.py  lmstudio_embedding_client.py
server/app/clients/llm_clients/: base_llm_client.py  gemini_llm_client.py
server/app/clients/web_search_clients/: base_web_search_client.py  tavily_client.py
server/app/config/: logger_config.py
server/app/constants/: chat.py  common.py  inventory.py  mia.py  public_routes.py  rag.py
server/app/constants/enums/: chat_enums.py  mia_enums.py
server/app/core/: database.py  errors.py  lifespan.py  logger_config.py  rabbitmq.py  redis_manager.py  secure_websocket.py  sse_manager.py  websocket_connection_manager.py
server/app/middleware/: clerk_auth_middleware.py  logging.py  rate_limiter.py
server/app/model/request/: chat.py  customer.py  mia.py  rag_request.py  service_job.py  vehicle.py
server/app/model/response/: chat.py  customer.py  mechanic.py  mia.py  mia_plan.py  rag_response.py  service_job.py  vehicle.py
server/app/model/sql_models/: chat.py  mia.py  rag.py
server/app/prompts/: all_agents_prompt.py  mia_prompts.py  motorcycle_assistant_prompt.py  summarization_prompt.py  thread_title_prompt.py
server/app/services/: chat_service.py  customer_service.py  inventory_service.py  mechanic_service.py  mia_service.py  rag_service.py  vehicle_service.py
server/app/services/llm/: agent_selector.py
server/app/services/llm/agents/: general_agent.py
server/app/settings/: settings.py
server/app/utils/: auth_utils.py  chat_utils.py  db_utils.py  inventory_utils.py  langsmith_utils.py  mia_utils.py  rag_utils.py
server/app/workflows/: chat_workflow.py  mia_workflow.py
server/config/: config.py
server/scripts/: lint.py  test_inventory_service.py  uvicorn_run.py  worker_run.py
server/scripts/populate_db/: seed_parts.py
server/src/: main.py
server/src/app/: main.py
server/src/app/routes/chat/: chat.py
server/src/app/services/llm/: agent_selector.py
server/src/app/services/llm/agents/: general_agent.py
server/src/prompts/: all_agents_prompt.py
server/src/routes/chat/: chat.py
server/src/services/llm/: agent_selector.py
server/src/services/llm/agents/: general_agent.py
server/src/settings/: settings.py
webclient/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
webclient/src/: middleware.ts
webclient/src/actions/: chat.ts  customer.ts  service-job.ts  vehicle.ts
webclient/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
webclient/src/components/: HeaderComponent.tsx
webclient/src/constants/: hideHeaderConstants.ts  homePageConstants.ts  notesFieldConstants.ts
webclient/src/fonts/: fonts.ts
webclient/src/hooks/: useSignUp.ts
webclient/src/lib/: clerk.ts  text-utils.ts
webclient/src/resources/: icons.ts  images.ts
webclient/src/schema/: customer.ts  service-job.ts  sign-up.ts  vehicle.ts
(+174 files in other folders)
