[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "langchain>=0.3.26",
    "openai>=1.97.0",
    "python-dotenv>=1.1.1",
    "langgraph>=0.5.3",
    "tavily-python>=0.7.10",
    "langsmith (>=0.4.8,<0.5.0)",
    "colorlog (>=6.9.0,<7.0.0)"
]
dev = [
    "ruff>=0.12.4,<0.13.0"
]

[tool.poetry]

[tool.poetry.dependencies]

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
