[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Avinash Haribaskar",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.26",
    "openai>=1.97.0",
    "python-dotenv>=1.1.1",
    "langgraph>=0.5.3",
    "tavily-python>=0.7.10",
    "langsmith (>=0.4.8,<0.5.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "langchain-google-genai (>=2.1.8,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "PyJWT (>=2.8.0,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pydantic[email] (>=2.12.3,<3.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "pypdf (>=6.5.0,<7.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "google-auth (>=2.45.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aio-pika (>=9.5.8,<10.0.0)",
    "redis[async] (>=7.1.1,<8.0.0)",
]
dev = [
    "ruff>=0.12.4,<0.13.0"
]

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.dependencies]

[tool.poetry.scripts]
dev = "scripts.uvicorn_run:run"
worker = "scripts.worker_run:run"
lint = "scripts.lint:run_lint"
lint-fix = "scripts.lint:run_lint_fix"
format = "scripts.lint:run_format"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


